# nexus-claude

./: AI-Model-Rankings-Feb-2026.md  Cargo.toml  Project-Nexus-Architecture.md  buil errors.txt  package-lock.json  package.json  shadow_error
scripts/: openclaw-migrate.sh  openclaw_migrate.py
src/: agent.rs  config.rs  daemon.rs  error.rs  hierarchy.rs  main.rs  oauth.rs  secret_store.rs
src/context/: cache.rs  diff.rs  file_tracker.rs  memory.rs  mod.rs  vector.rs
src/executor/: mod.rs  parser.rs  tools.rs
src/mcp/: client.rs  command_validator.rs  mod.rs  resources.rs  server.rs  tools.rs
src/memory/: consolidation.rs  event_store.rs  graph.rs  mod.rs  semantic.rs  types.rs
src/providers/: claude.rs  google.rs  mod.rs  model_capabilities.rs  opencode.rs  openrouter.rs  retry.rs  token_budget.rs
src/sandbox/: docker.rs  hydration.rs  mod.rs  validator.rs
src/swarm/: architect.rs  merger.rs  mod.rs  scheduler.rs  worker.rs
src/watcher/: filesystem.rs  healer.rs  logs.rs  mod.rs  patterns.rs
