[package]
name = "nexus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1.89"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.15.19", features = ["yaml", "toml"] }
crossterm = "0.29.0"
dialoguer = "0.12.0"
directories = "6.0.0"
glob = "0.3"
keyring = "3.6.3"
md5 = "0.7"
walkdir = "2"
notify = "6.1"
notify-debouncer-full = "0.3"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
open = "5.0"
urlencoding = "2.1"
ratatui = { version = "0.30.0", features = ["crossterm"] }
regex = "1.10"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
futures-util = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }
toml = "0.8"
uuid = { version = "1.20.0", features = ["v4"] }
shell-words = "1.1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
tempfile = "3.14"
